--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <title>car
+    <title>car race.
     </title>
     <style>
         body {
@@ -21,7 +21,7 @@
 
     <div id='div1'>
         <center>
-            <h1>CAR RACERS</h1>
+            <h1>CAR RACE.</h1>
             <h1>GAME STATUS:<span id="game_status"></span></h1>
             <canvas id="myCanvas" width="800" height="500"></canvas>
             <h4>
